[project]
name = "pinjected-error-reports"
version = "0.1.8a2"
description = "Add your description here"
authors = [
    { name = "proboscis", email = "nameissoap@gmail.com" }
]
dependencies = [
    "pinjected>=0.2.234",
    "pinjected-openai @ git+https://github.com/proboscis/pinjected_openai.git",
    "pinjected-niji-voice @ git+https://github.com/proboscis/pinjected-niji-voice.git",
    "injected-utils>=0.1.30",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pinjected_error_reports"]
